--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>dough-management</name>
 	<description>Demo project for Spring Boot</description>
+	<profiles>
+		<profile>
+			<id>local</id>
+		</profile>
+	</profiles>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
